--- a/inst/resources/css/poster-jacobs.css
+++ b/inst/resources/css/poster-jacobs.css
@@ -23,12 +23,12 @@ body {
   display: grid;
   grid-template-areas:
     'S1 S1 S1 S1'
-    'S2 S2 S2 S2'
+    'S2 S2 S5 S5'
     'S3 S3 S5 S5'
     'S3 S3 S5 S5'
     'S3 S3 S6 S6'
     'S4 S4 S6 S6'
-    'S4 S4 S7 S7';
+    'S4 S4 S7 S8';
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(7, 1fr);
 }
@@ -40,6 +40,7 @@ body {
 .section-5 { grid-area: S5; }
 .section-6 { grid-area: S6; }
 .section-7 { grid-area: S7; }
+.section-8 { grid-area: S8; }
 
 h1, .poster-title, .figure {
   text-align: center;
