--- a/inst/resources/css/poster-jacobs.css
+++ b/inst/resources/css/poster-jacobs.css
@@ -24,13 +24,14 @@ body {
   grid-template-areas:
     'S1 S1 S1 S1'
     'S2 S2 S4 S4'
+    'S3 S3 S4 S4'
     'S3 S3 S5 S5'
     'S3 S3 S5 S5'
     'S3 S3 S5 S5'
     'S3 S3 S5 S5'
     'S3 S3 S6 S7';
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-rows: repeat(8, 1fr);
 }
 
 .section-1 { grid-area: S1; }
