--- a/inst/resources/css/poster-jacobs.css
+++ b/inst/resources/css/poster-jacobs.css
@@ -81,7 +81,8 @@ h1 {
 
 table {
   float: none;
-  margin: auto;
+  width: 5400px;
+  margin-right: auto;
   border-top: 3px solid #666;
   border-bottom: 3px solid #666;
 }
