--- a/inst/resources/css/poster-jacobs.css
+++ b/inst/resources/css/poster-jacobs.css
@@ -16,7 +16,7 @@ body {
   height: 99.9%;
   grid-gap: 1.2in;
   padding: 1.2in;
-  font-family: Optima, Calibri, sans-serif;
+  font-family: Avenir, sans-serif;
 }
 
 body {
