--- a/inst/resources/css/poster-jacobs.css
+++ b/inst/resources/css/poster-jacobs.css
@@ -42,6 +42,7 @@ body {
 .section-5 { grid-area: S5; }
 .section-6 { grid-area: S6; }
 .section-7 { grid-area: S7; }
+.section-7 { grid-area: S8; }
 
 h1, .poster-title, .figure {
   text-align: center;
