--- a/inst/resources/css/poster-jacobs.css
+++ b/inst/resources/css/poster-jacobs.css
@@ -22,6 +22,7 @@ body {
 body {
   display: grid;
   grid-template-areas: 
+    'S1 S1 S1 S1'
     'S2 S2 S4 S4'
     'S3 S3 S4 S4'
     'S3 S3 S4 S4'
@@ -31,7 +32,7 @@ body {
     'S3 S3 S5 S5'
     'S3 S3 S6 S7';
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(8, 1fr);
+  grid-template-rows: repeat(9, 1fr);
 }
 
 .section-1 { grid-area: S1; }
