--- a/inst/resources/css/poster-jacobs.css
+++ b/inst/resources/css/poster-jacobs.css
@@ -28,10 +28,11 @@ body {
     'S3 S3 S4 S4'
     'S3 S3 S5 S5'
     'S3 S3 S5 S5'
+    'S3 S3 S5 S5'
     'S3 S3 S6 S7'
     'S3 S3 S6 S7';
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(8, 1fr);
+  grid-template-rows: repeat(9, 1fr);
 }
 
 .section-1 { grid-area: S1; }
