--- a/inst/resources/css/poster-jacobs.css
+++ b/inst/resources/css/poster-jacobs.css
@@ -39,9 +39,10 @@ body {
     'S3 S3 S6 S7'
     'S3 S3 S6 S7'
     'S3 S3 S6 S7'
+    'S3 S3 S6 S7'
     'S3 S3 S6 S7';
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(18, 1fr);
+  grid-template-rows: repeat(19, 1fr);
 }
 
 .section-1 { grid-area: S1; }
